--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
 	"name": "@iosio/x",
 	"version": "0.0.4",
-	"description": "web component experiments",
+	"description": "build web components using vdom ~ 3kb",
 	"main": "lib/index.js",
 	"module": "lib/index.esm.js",
+	"module.min": "lib/index.esm.min.js",
 	"browser": "lib/index.bundle.js",
 	"publishConfig": {
 		"access": "public"
