--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
 		"karma-jasmine": "^2.0.1",
 		"karma-rollup-preprocessor": "^7.0.2",
 		"karma-spec-reporter": "0.0.32",
-		"preact": "^10.0.0-rc.1",
+		"preact": "^10.0.0-rc.3",
 		"rimraf": "^2.6.3",
 		"rollup": "^1.15.4",
 		"rollup-plugin-babel": "^4.3.3",
 		"rollup-plugin-index-html": "^1.5.0",
 		"rollup-plugin-node-resolve": "^5.2.0",
-		"rollup-plugin-terser": "^5.1.1",
-		"rollup-plugin-sucrase": "^2.1.0"
+		"rollup-plugin-sucrase": "^2.1.0",
+		"rollup-plugin-terser": "^5.1.1"
 	}
 }
