--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"karma-rollup-preprocessor": "^7.0.2",
 		"karma-spec-reporter": "0.0.32",
 		"preact": "^10.0.0-rc.3",
+		"puppeteer": "^1.19.0",
 		"rimraf": "^2.6.3",
 		"rollup": "^1.15.4",
 		"rollup-plugin-babel": "^4.3.3",
