--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@iosio/x",
 	"version": "0.0.27",
-	"description": "build web components using vdom ~ 3kb",
+	"description": "Build web components using vdom and jsx",
 	"main": "lib/index.js",
 	"module": "lib/index.esm.js",
 	"module.min": "lib/index.esm.min.js",
@@ -11,24 +11,21 @@
 	},
 	"license": "MIT",
 	"files": [],
-	"keywords": [],
+	"keywords": [
+		"web-components",
+		"web",
+		"components",
+		"custom-elements",
+		"jsx",
+		"vdom",
+		"virtual-dom"
+	],
 	"scripts": {
 		"start": "NODE_ENV=development es-dev-server",
 		"test": "NODE_ENV=test karma start --single-run --browsers ChromeHeadless karma.conf.js",
 		"build": "NODE_ENV=production rimraf lib && rollup -c rollup.config.js"
 	},
-	"peerDependencies": {
-		"@iosio/obi": "0.0.6"
-	},
-	"peerDependenciesMeta": {
-		"@iosio/obi": {
-			"optional": true
-		}
-	},
-	"dependencies": {
-		"@iosio/obi": "0.0.8",
-		"@iosio/util": "0.0.4"
-	},
+	"dependencies": {},
 	"devDependencies": {
 		"@atomico/rollup-plugin-sizes": "^1.0.3",
 		"@babel/core": "^7.5.5",
@@ -41,6 +38,7 @@
 		"@iosio/babel-plugin-jcss": "0.0.4",
 		"@open-wc/building-utils": "^2.7.0",
 		"babel-plugin-bundled-import-meta": "^0.3.1",
+		"babel-plugin-file-loader": "^1.1.1",
 		"babel-plugin-transform-inline-environment-variables": "^0.4.3",
 		"es-dev-server": "^1.5.0",
 		"jasmine-core": "^3.4.0",
@@ -55,6 +53,7 @@
 		"rollup": "^1.15.4",
 		"rollup-plugin-babel": "^4.3.3",
 		"rollup-plugin-index-html": "^1.5.0",
+		"rollup-plugin-multi-input": "^1.0.2",
 		"rollup-plugin-node-resolve": "^5.2.0",
 		"rollup-plugin-sucrase": "^2.1.0",
 		"rollup-plugin-terser": "^5.1.1"
