--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
 	"name": "@iosio/x",
 	"version": "0.1.3",
 	"description": "Build web components using vdom and jsx",
-	"main": "lib/index.js",
-	"module": "lib/index.esm.js",
-	"module.min": "lib/index.esm.min.js",
-	"browser": "lib/index.bundle.js",
+	"main": "index.js",
+	"module": "index.js",
 	"publishConfig": {
 		"access": "public"
 	},
 	"license": "MIT",
-	"files": [],
+	"files": ["src", "index.js", "routing.js", "utils.js", "obi.js"],
 	"keywords": [
 		"web-components",
 		"web",
