changed h call signature to be the same as p/reacts. chilren are included on props instead of the second argument. Also moved mounting point logic to the vdom file so that the patch function inside of the base component can be swapped out more easily if decided to at a later time.

--- a/package.json
+++ b/package.json
@@ -1,65 +1,85 @@
 {
-	"name": "@iosio/x",
-	"version": "0.1.5",
-	"description": "Build web components using vdom and jsx",
-	"main": "index.js",
-	"module": "index.js",
-	"publishConfig": {
-		"access": "public"
-	},
-	"license": "MIT",
-	"files": [
-		"src",
-		"index.js",
-		"routing.js",
-		"utils.js",
-		"obi.js"
-	],
-	"keywords": [
-		"web-components",
-		"web",
-		"components",
-		"custom-elements",
-		"jsx",
-		"vdom",
-		"virtual-dom"
-	],
-	"scripts": {
-		"start": "NODE_ENV=development es-dev-server",
-		"test": "NODE_ENV=test karma start --single-run --browsers ChromeHeadless karma.conf.js",
-		"build": "NODE_ENV=production rimraf lib && rollup -c rollup.config.js"
-	},
-	"dependencies": {},
-	"devDependencies": {
-		"@atomico/rollup-plugin-sizes": "^1.0.3",
-		"@babel/core": "^7.5.5",
-		"@babel/plugin-proposal-class-properties": "^7.5.5",
-		"@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
-		"@babel/plugin-syntax-import-meta": "^7.2.0",
-		"@babel/plugin-transform-react-jsx": "^7.3.0",
-		"@babel/plugin-transform-template-literals": "^7.4.4",
-		"@iosio/babel-plugin-jcss": "0.0.4",
-		"@open-wc/building-utils": "^2.7.0",
-		"babel-plugin-bundled-import-meta": "^0.3.1",
-		"babel-plugin-file-loader": "^1.1.1",
-		"babel-plugin-transform-inline-environment-variables": "^0.4.3",
-		"es-dev-server": "^1.5.0",
-		"jasmine-core": "^3.4.0",
-		"karma": "^4.2.0",
-		"karma-chrome-launcher": "^3.1.0",
-		"karma-jasmine": "^2.0.1",
-		"karma-rollup-preprocessor": "^7.0.2",
-		"karma-spec-reporter": "0.0.32",
-		"preact": "^10.0.0-rc.3",
-		"puppeteer": "^1.19.0",
-		"rimraf": "^2.6.3",
-		"rollup": "^1.15.4",
-		"rollup-plugin-babel": "^4.3.3",
-		"rollup-plugin-index-html": "^1.5.0",
-		"rollup-plugin-multi-input": "^1.0.2",
-		"rollup-plugin-node-resolve": "^5.2.0",
-		"rollup-plugin-sucrase": "^2.1.0",
-		"rollup-plugin-terser": "^5.1.1"
-	}
+  "name": "@iosio/x",
+  "version": "0.1.9",
+  "description": "Build web components using vdom and jsx",
+  "main": "index.js",
+  "module": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
+  "license": "MIT",
+  "files": [
+    "src",
+    "index.js",
+    "routing.js",
+    "utils.js",
+    "obi.js",
+    "common.js"
+  ],
+  "keywords": [
+    "web-components",
+    "web",
+    "components",
+    "custom-elements",
+    "jsx",
+    "vdom",
+    "virtual-dom"
+  ],
+  "PROJECTS": {
+    "demo": {
+      "src": "demo",
+      "outputDir": "demoBuild"
+    },
+    "lib": {
+      "src": [
+        "src/index.js",
+        "src/utils.js",
+        "src/routing.js",
+        "src/obi.js"
+      ],
+      "outputDir": "./"
+    }
+  },
+  "scripts": {
+    "start": "rollup -c --environment SERVE,PROJECT:demo --watch demo/**",
+    "build": "rollup --c --environment BUILD_LIB,PROJECT:lib",
+    "test": "cross-env NODE_ENV=test karma start --single-run --browsers ChromeHeadless karma.config.js"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@atomico/rollup-plugin-sizes": "^1.0.3",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/plugin-transform-template-literals": "^7.4.4",
+    "@iosio/babel-plugin-jcss": "0.0.4",
+    "@open-wc/building-utils": "^2.7.0",
+    "babel-plugin-bundled-import-meta": "^0.3.1",
+    "babel-plugin-file-loader": "^1.1.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "cross-env": "^6.0.3",
+    "es-dev-server": "^1.5.0",
+    "jasmine-core": "^3.4.0",
+    "karma": "^4.2.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-rollup-preprocessor": "^7.0.2",
+    "karma-spec-reporter": "0.0.32",
+    "preact": "^10.0.0-rc.3",
+    "puppeteer": "^1.19.0",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.15.4",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-index-html": "^1.5.0",
+    "rollup-plugin-livereload": "^1.0.4",
+    "rollup-plugin-multi-input": "^1.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-sucrase": "^2.1.0",
+    "rollup-plugin-terser": "^5.1.1",
+    "rollup-plugin-url": "^3.0.0"
+  }
 }
