--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
       "src": "demo",
       "outputDir": "demoBuild"
     },
+    "preactWithX": {
+      "src": "preactWithX",
+      "outputDir": "demoBuild"
+    },
     "lib": {
       "src": [
         "src/index.js",
@@ -42,7 +46,8 @@
   },
   "scripts": {
     "start": "rollup -c --environment SERVE,PROJECT:demo --watch demo/**",
-    "build": "rollup --c --environment BUILD_LIB,PROJECT:lib",
+    "start:preact": "rollup -c --watch preactWithX/**",
+    "build": "rollup -c --environment BUILD_LIB,PROJECT:lib",
     "build:demo": "rollup --c --environment BUILD_APP,PROJECT:demo",
     "test": "cross-env NODE_ENV=test karma start --single-run --browsers ChromeHeadless karma.config.js"
   },
@@ -75,7 +80,7 @@
     "rimraf": "^2.6.3",
     "rollup": "^1.15.4",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-index-html": "^1.5.0",
+    "rollup-plugin-index-html": "^1.5.5",
     "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-multi-input": "^1.0.2",
     "rollup-plugin-node-resolve": "^5.2.0",
